fix(layout): fix overflow on program-page details for safari

--- a/src/styles/program-page.css
+++ b/src/styles/program-page.css
@@ -31,6 +31,8 @@
 
   @screen xl {
     @apply sticky left-auto w-auto overflow-hidden;
+    /* will-change: transform; */
+    transform: translateZ(0);
   }
 }
 
